--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <nav>
       <a href="#">Home</a>
       <a href="https://www.lipsum.com/">Additional Lorem Ipsum</a>
-      <a href="https://google.com/">To Google</a>
+      <a href="https://www.w3schools.com/css/default.asp">W3 Schools</a>
+
+      <form>
+        <input name="search" type="text">
+        <input name="submit" type="submit" value="Search">
+      </form>
     </nav>
 
     <h1>The CSS!</h1>
